testsuite/tests/type-data/should_fail/TDRecursive.hs
{-# LANGUAGE TypeData #-}
module TDRecursive where

type data T f = K (f (K Int))
